<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sideBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/sidebar_background">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/searchButton"
        android:text="搜索"
        android:background="@drawable/background"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/resetButton"
        android:text="重置"
        android:background="@drawable/background"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@id/searchButton"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstLetter"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/firstLetter"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_power"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_power"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_place"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_place"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_year"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_year"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_sex"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/hero_sex"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchName"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:imeOptions="actionSearch"
                    android:id="@+id/searchFrame"
                    android:hint="请输入英雄名字"/>
                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView">
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>