<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="strongestgirls.midproject.DetailActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorCyan">
            <strongestgirls.midproject.CircleImageView
                android:id="@+id/hero_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/hero_img"
                android:src="@mipmap/zhou_yu"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="false"
                android:focusable="false"/>
            <EditText
                android:id="@+id/hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="25sp"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:background="@null"/>
            <TextView
                android:id="@+id/hero_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_power"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:background="@null"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_32px"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>


    <!--详情界面-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:visibility="visible"
        android:id="@+id/detailView">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_sex"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/hero_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_sex"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                app:layout_constraintLeft_toRightOf="@+id/sexText"
                app:layout_constraintTop_toTopOf="@+id/sexText"
                app:layout_constraintBottom_toBottomOf="@+id/sexText"/>

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="@+id/hero_sex"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp">
                <!--生卒-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/hero_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_year"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/birth_year"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="到"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/death_year"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                </LinearLayout>
                <!--古代籍贯-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/placeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_place"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/hero_place"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/eventText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearlayout"/>
            <!--相关事迹-->
            <TextView
                android:id="@+id/hero_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sample"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/eventText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="删除"
                android:textSize="18sp"
                android:background="@drawable/circular"
                android:layout_margin="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit"
                app:layout_constraintTop_toBottomOf="@+id/hero_event"/>
            <Button
                android:id="@+id/edit"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="编辑"
                android:textSize="18sp"
                android:background="@drawable/circular"
                android:layout_margin="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/delete"
                app:layout_constraintTop_toBottomOf="@+id/hero_event"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <!--编辑界面-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/editView"
        android:visibility="gone">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_sex"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <RadioGroup
                android:id="@+id/sexSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintLeft_toRightOf="@+id/sex"
                app:layout_constraintTop_toTopOf="@+id/sex"
                app:layout_constraintBottom_toBottomOf="@+id/sex">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:textSize="18sp"
                    android:checked="true"
                    android:layout_marginStart="15dp"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintLeft_toRightOf="@+id/male"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="@+id/sex"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp">
                <!--生卒-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_year"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/birth_spinner"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="100dp"/>
                    <TextView
                        android:id="@+id/line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="到"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/death_spinner"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="110dp"/>
                </LinearLayout>
                <!--古代籍贯-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_place"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/place_spinner"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="70dp"/>
                </LinearLayout>
                <!--主效势力-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_power"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/power_spinner"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:dropDownWidth="90dp"/>
                </LinearLayout>
            </LinearLayout>

            <!--相关事迹-->
            <TextView
                android:id="@+id/event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/linear"
                android:layout_marginStart="20dp" />
            <EditText
                android:id="@+id/edit_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@+id/event"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="确定"
                android:textSize="18sp"
                android:background="@drawable/circular"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                tools:layout_editor_absoluteX="88dp" />
            <Button
                android:id="@+id/cancel"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:text="取消"
                android:textSize="18sp"
                android:background="@drawable/circular"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event"
                app:layout_constraintStart_toEndOf="@+id/confirm"
                tools:layout_editor_absoluteX="246dp" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>
